--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -42,19 +42,17 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: java-app
-
+      - name: Install Az CLI
+        uses: azure/CLI@v1
+        
       - name: Login to Azure
         uses: azure/login@v1
         with:
           creds: |
             {
-              "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
-              "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
-              "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
-              "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
+               creds: ${{ secrets.AZURE_CREDENTIALS }}
             }
-      - name: Install Az CLI
-        uses: azure/CLI@v1
+
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
