--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -42,16 +42,16 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: java-app
-      - name: Install Az CLI
-        uses: azure/CLI@v1
-        
+      - name: Install Azure CLI
+        run: |
+            curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+                az --version
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: |
-            {
-               creds: ${{ secrets.AZURE_CREDENTIALS }}
-            }
+           creds: ${{ secrets.AZURE_CREDENTIALS }}
+
 
 
       - name: Deploy to Azure Web App
