--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -47,10 +47,11 @@ jobs:
             curl -sL https://aka.ms/InstallAzureCLIDeb
                 az --version
 
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-           creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Set up Azure CLI
+        uses: azure/CLI@v1
+      - name: Log in to Azure
+        run: az login --service-principal -u ${{ secrets.AZURE_CREDENTIALS.clientId }} -p ${{ secrets.AZURE_CREDENTIALS.clientSecret }} --tenant ${{ secrets.AZURE_CREDENTIALS.tenantId }}
+
 
 
       - name: Deploy to Azure Web App
