--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -47,10 +47,8 @@ jobs:
             curl -sL https://aka.ms/InstallAzureCLIDeb
                 az --version
 
-      - name: Set up Azure CLI
-        uses: azure/CLI@v1
       - name: Log in to Azure
-        run: az login --service-principal -u ${{ secrets.AZURE_CREDENTIALS.clientId }} -p ${{ secrets.AZURE_CREDENTIALS.clientSecret }} --tenant ${{ secrets.AZURE_CREDENTIALS.tenantId }}
+        run: az login --service-principal -u "${{ secrets.AZURE_CREDENTIALS.clientId }}" -p "${{ secrets.AZURE_CREDENTIALS.clientSecret }}" --tenant "${{ secrets.AZURE_CREDENTIALS.tenantId }}"
 
 
 
